# qlibAssistant

./: .gitignore  pyproject.toml
.github/workflows/: train.yml
page/docs/pages/mahoupao/: review_result.md
roll/: datacli.py  modelcli.py  traincli.py  utils.py
script/: gen_page.py  run.py  sync_dolt.py
tests/: test_model.py  test_page.py  test_train.py
